# slima_agents

./: .env.example  .gitignore  CLAUDE.md  README.md  entry.py  pyproject.toml
.github/workflows/: build-binary.yml  test.yml
docs/: agent-ui-dev.md  distribution-plan.md  frontend-integration.md  json-progress-plan.md  mystery-pipeline.md  session-resume-plan.md  task-pipeline-guide.md  worldbuild-pipeline.md
src/slima_agents/: __init__.py  cli.py  config.py  lang.py  progress.py  templates.py  tracker.py
src/slima_agents/agents/: __init__.py  ask.py  base.py  claude_runner.py  context.py  plan_builder.py  research.py  task.py  task_models.py  task_orchestrator.py  tools.py
src/slima_agents/mystery/: __init__.py  context.py  orchestrator.py  planner.py  templates.py  validator.py
src/slima_agents/pipeline/: __init__.py  context.py  models.py  orchestrator.py  planner.py  writer_agent.py
src/slima_agents/slima/: __init__.py  client.py  types.py
tests/: conftest.py  test_ask_agent.py  test_base_agent.py  test_cli.py  test_config.py  test_context_snapshot.py  test_dynamic_context.py  test_generic_orchestrator.py  test_generic_planner.py  test_lang.py  test_market_research.py  test_mystery_orchestrator.py  test_mystery_planner.py  test_orchestrator.py  test_orchestrator_split.py  test_pipeline_models.py  test_plan_builder.py  test_planner_upgrade.py  test_progress.py  test_session_resume.py  test_slima_client.py  test_specialists.py  test_streaming.py  test_task_agent.py  test_task_models.py  test_task_orchestrator.py  test_tracker.py  test_writer_agent.py
(+24 files in other folders)
